# AEI

./: .gitignore  README.md
Models/exports/export_utils/: trace_pytorch_model.py
Models/inference/: scene_3d_infer.py  scene_seg_infer.py
Models/inference_trt/: CMakeLists.txt  run_sceneseg.cpp
Models/model_components/: scene_neck.py
Models/sceneSeg/onnx_rt/: CMakeLists.txt
Models/visualizations/SceneSeg/: compare_onnx_trt.py  image_visualization.py  run_inference.py  run_inference_onnx.py  run_inference_trt_single.py  video_visualization.py
Scene3D/: run_scene3d.py
Scene3D/create_metric_depth/Argoverse/: process_argoverse.py
Scene3D/create_metric_depth/DrivingStereo/: process_driving_stereo.py
Scene3D/create_metric_depth/KITTI/: process_kitti.py
SceneSeg/: profile_net.py  requirements.txt  run_sceneseg.py
SceneSeg/create_masks/ACDC/: process_acdc.py
SceneSeg/create_masks/BDD100K/: process_bdd100k.py
SceneSeg/create_masks/IDDAW/: process_iddaw.py
SceneSeg/create_masks/MUSES/: process_muses.py
SceneSeg/create_masks/Mapillary_Vistas/: process_mapillary_vistas.py
SceneSeg/create_masks/comma10K/: process_comma10k.py
SceneSeg/deployment/: CMakeLists.txt  inspect_trt.py  run_inference.cpp  test_inference.py
SceneSeg/deployment/include/: runner.hpp  structs.hpp  utils.hpp  visualization.hpp
SceneSeg/viz/: image_visualization.py  run_inference.py  run_inference_trt.py
network/inference/: scene_3d_infer.py  scene_seg_infer.py
network/model_components/: auto_speed_backbone.py  auto_speed_head.py  auto_speed_neck.py  auto_speed_network.py  scene_3d_network.py  scene_seg_network.py
scripts/: inspect_onnx.py  inspect_trt.py  profile_sceneseg.py  quantize_trt.py
scripts/exports/export_utils/: convert_pytorch_to_onnx.py  quantize_onnx_model.py
scripts/exports/libtorch/: CMakeLists.txt
scripts/exports/onnx_rt/: CMakeLists.txt
training/: train_ego_path.py
tutorials/: tutorial-runtime.ipynb
utils/: inspect_pth.py  masks.py  visualize.py
